--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,6 @@ body {
 }
 .article ul {
     padding:10px 0  15px 15px ;
-    margin-bottom: 1rem;
     list-style-image: url(../assets/images/icon-list.svg);
 }
 .article li {
@@ -72,7 +71,7 @@ body {
 .display label {
     /* display: none; */
     font-weight: 700;
-    padding: -18px;
+    /* padding: -18px;X */
 }
 .display input {
     padding: 1rem;
@@ -210,8 +209,10 @@ button:hover {
         /* height: 20rem; */
     }
     .article {
-        padding: 1.5rem;
+        padding: 3.5em 2em 2em 3em;
         width: 30rem;
+    }.article ul {
+        margin-bottom: -1re;
     }
 }
 
